// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connection › Router Add items to extracted once they are ready 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "extract": true,
            "id": 7,
            "page": 1,
            "type": "category",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_54",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
      Object {
        "mstId": "mockedId_53",
        "rawItems": Array [
          Object {
            "extract": true,
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_54",
  },
]
`;

exports[`Connection › Router Columns should not show next items if extracted after that item is not resolved 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "type": "post",
          },
        ],
        Array [
          Object {
            "extract": true,
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_55",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
      Object {
        "mstId": "mockedId_56",
        "rawItems": Array [
          Object {
            "extract": true,
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "mockedId_57",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_55",
  },
]
`;

exports[`Connection › Router Columns should not show previous items if extracted before that item is not resolved 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "type": "post",
          },
        ],
        Array [
          Object {
            "extract": true,
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_58",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "mockedId_59",
        "rawItems": Array [
          Object {
            "extract": true,
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "mockedId_60",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_63",
      },
    ],
    "selectedColumn": "mockedId_60",
  },
]
`;

exports[`Connection › Router Initializes contexts as empty array 1`] = `Array []`;

exports[`Connection › Router Move selected single 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_29",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": true,
          },
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "0_post_63",
      },
      Object {
        "mstId": "mockedId_30",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_29",
  },
]
`;

exports[`Connection › Router Move selected single from column with only that item 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_31",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "mockedId_32",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": true,
          },
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "0_post_62",
      },
    ],
    "selectedColumn": "mockedId_32",
  },
]
`;

exports[`Connection › Router Replace context with new one 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
          Object {
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
        ],
        Array [
          Object {
            "id": 3,
            "page": 1,
            "type": "tag",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_40",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
          Object {
            "extract": null,
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "mockedId_41",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "mockedId_42",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 3,
            "mstId": "0_tag_3_page_1",
            "page": 1,
            "type": "tag",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_37",
  },
]
`;

exports[`Connection › Router Select in next context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
          Object {
            "id": 7,
            "page": 2,
            "type": "category",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_49",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": true,
          },
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_2",
            "page": 2,
            "type": "category",
            "visited": true,
          },
        ],
        "selectedItem": "0_category_7_page_2",
      },
    ],
    "selectedColumn": "mockedId_49",
  },
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 62,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 1,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_50",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "1_post_62",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "1_post_62",
      },
    ],
    "selectedColumn": "mockedId_50",
  },
]
`;

exports[`Connection › Router Select in previous context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
          Object {
            "id": 7,
            "page": 2,
            "type": "category",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_45",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": true,
          },
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_2",
            "page": 2,
            "type": "category",
            "visited": true,
          },
        ],
        "selectedItem": "0_category_7_page_2",
      },
    ],
    "selectedColumn": "mockedId_45",
  },
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 62,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 1,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_46",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "1_post_62",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "1_post_62",
      },
    ],
    "selectedColumn": "mockedId_46",
  },
]
`;

exports[`Connection › Router Selected list 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 7,
            "page": 2,
            "type": "category",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_3",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_2",
            "page": 2,
            "type": "category",
            "visited": true,
          },
        ],
        "selectedItem": "0_category_7_page_2",
      },
    ],
    "selectedColumn": "mockedId_3",
  },
]
`;

exports[`Connection › Router Selected list and new context with selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
        ],
        Array [
          Object {
            "id": 10,
            "page": 1,
            "type": "tag",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_13",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "mockedId_14",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": true,
          },
        ],
        "selectedItem": "0_category_7_page_1",
      },
      Object {
        "mstId": "mockedId_15",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 10,
            "mstId": "0_tag_10_page_1",
            "page": 1,
            "type": "tag",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_14",
  },
]
`;

exports[`Connection › Router Selected list and new context without selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
        Array [
          Object {
            "id": 3,
            "page": 1,
            "type": "category",
          },
        ],
        Array [
          Object {
            "id": 10,
            "page": 1,
            "type": "tag",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_19",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": true,
          },
        ],
        "selectedItem": "0_category_7_page_1",
      },
      Object {
        "mstId": "mockedId_16",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "mockedId_17",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 3,
            "mstId": "0_category_3_page_1",
            "page": 1,
            "type": "category",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "mockedId_18",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 10,
            "mstId": "0_tag_10_page_1",
            "page": 1,
            "type": "tag",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_19",
  },
]
`;

exports[`Connection › Router Selected list with previous different context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_6",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "mockedId_6",
  },
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
        ],
      ],
    },
    "index": 1,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_7",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 7,
            "mstId": "1_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": true,
          },
        ],
        "selectedItem": "1_category_7_page_1",
      },
    ],
    "selectedColumn": "mockedId_7",
  },
]
`;

exports[`Connection › Router Selected single 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_2",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "mockedId_2",
  },
]
`;

exports[`Connection › Router Selected single and context object with extracted 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "extract": true,
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_54",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
      Object {
        "mstId": "mockedId_53",
        "rawItems": Array [
          Object {
            "extract": true,
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_54",
  },
]
`;

exports[`Connection › Router Selected single and new context with selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_8",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "mockedId_9",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": false,
          },
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "mockedId_9",
  },
]
`;

exports[`Connection › Router Selected single and new context without selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 64,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_12",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
      Object {
        "mstId": "mockedId_10",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "mockedId_11",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": false,
          },
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 64,
            "mstId": "0_post_64",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_12",
  },
]
`;

exports[`Connection › Router Selected single and new context, with previous diff context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_21",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "mockedId_21",
  },
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 1,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_22",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "1_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "mockedId_23",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "1_post_62",
            "type": "post",
            "visited": false,
          },
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "1_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "1_post_60",
      },
    ],
    "selectedColumn": "mockedId_23",
  },
]
`;

exports[`Connection › Router Selected single and previous context with selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_24",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_63",
      },
      Object {
        "mstId": "mockedId_25",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": false,
          },
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "mockedId_24",
  },
]
`;

exports[`Connection › Router Selected single with previous different context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_4",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_63",
      },
    ],
    "selectedColumn": "mockedId_4",
  },
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 1,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_5",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "1_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "1_post_60",
      },
    ],
    "selectedColumn": "mockedId_5",
  },
]
`;

exports[`Connection › Router Selected single with previous equal context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_20",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "mockedId_20",
  },
]
`;
